--- a/common/packages.config
+++ b/common/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="NLog" version="4.6.6" targetFramework="net472" />
   <package id="Pipelines.Sockets.Unofficial" version="2.0.22" targetFramework="net472" />
   <package id="StackExchange.Redis" version="2.0.601" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
