--- a/server/packages.config
+++ b/server/packages.config
@@ -1,4 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Anna" version="1.0.1008" targetFramework="net472" />
   <package id="NLog" version="4.6.6" targetFramework="net472" />
+  <package id="Rx-Core" version="2.1.30214.0" targetFramework="net472" />
+  <package id="Rx-Interfaces" version="2.1.30214.0" targetFramework="net472" />
+  <package id="Rx-Linq" version="2.1.30214.0" targetFramework="net472" />
+  <package id="Rx-Main" version="2.1.30214.0" targetFramework="net472" />
+  <package id="Rx-PlatformServices" version="2.1.30214.0" targetFramework="net472" />
 </packages>
