Add Skins.xml (it is not embedded inside the client in version 7.0, and instead will later get used in app/init)

--- a/common/common.csproj
+++ b/common/common.csproj
@@ -235,6 +235,9 @@
     <Content Include="resources\xml\EmbeddedData_WillemTesting.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="resources\xml\Skins.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
