--- a/common/init.config
+++ b/common/init.config
@@ -1,4 +1,21 @@
 ﻿<AppSettings>
+  <NewAccounts>
+    <MaxCharSlot>1</MaxCharSlot>
+    <VaultCount>1</VaultCount>
+    <Fame>0</Fame>
+    <Credits>0</Credits>
+    <Slots>
+      <cost>600</cost>
+      <cost>800</cost>
+      <cost>1000</cost>
+    </Slots>
+    <!--<ClassesUnlocked/>-->
+    <!--<SkinsUnlocked/>-->
+  </NewAccounts>
+  <NewCharacters>
+    <Level>1</Level>
+    <!--<Maxed/>-->
+  </NewCharacters>
   <UseExternalPayments>0</UseExternalPayments>
   <MaxStackablePotions>6</MaxStackablePotions>
   <PotionPurchaseCooldown>400</PotionPurchaseCooldown>
