--- a/common/server.config
+++ b/common/server.config
@@ -1,6 +1,18 @@
 ﻿<config>
+  <!--Common info-->
   <resourcePath>resources</resourcePath>
-  <debugRequests>1</debugRequests>
+  <debugMode>1</debugMode>
+  
+  <!--Server info-->
   <bindAddress>127.0.0.1</bindAddress>
-  <port>80</port>
+  <bindPort>80</bindPort>
+  
+  <!--World info-->
+  <name>localhost</name>
+  <address>127.0.0.1</address>
+  <port>2050</port>
+  <adminOnly>0</adminOnly>
+  <maxPlayers>256</maxPlayers>
+  <latitude>0</latitude>
+  <longitude>0</longitude>
 </config>
