--- a/common/common.csproj
+++ b/common/common.csproj
@@ -664,127 +664,127 @@
     <Content Include="resources\web\sfx\weapon\wand_of_death.mp3">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_AbyssOfDemons.xml">
+    <Content Include="resources\xml\EmbeddedData_AbyssOfDemonsCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_CandyLand.xml">
+    <Content Include="resources\xml\EmbeddedData_CandyLandCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_CaveOfAThousandTreasures.xml">
+    <Content Include="resources\xml\EmbeddedData_CaveOfAThousandTreasuresCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_Dyes.xml">
+    <Content Include="resources\xml\EmbeddedData_DyesCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_Encounters.xml">
+    <Content Include="resources\xml\EmbeddedData_EncountersCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_Equip.xml">
+    <Content Include="resources\xml\EmbeddedData_EquipCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_ForbiddenJungle.xml">
+    <Content Include="resources\xml\EmbeddedData_ForbiddenJungleCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_GhostShip.xml">
+    <Content Include="resources\xml\EmbeddedData_GhostShipCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="resources\xml\EmbeddedData_GroundCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_HauntedCemetery.xml">
+    <Content Include="resources\xml\EmbeddedData_HauntedCemeteryCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_High.xml">
+    <Content Include="resources\xml\EmbeddedData_HighCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_Low.xml">
+    <Content Include="resources\xml\EmbeddedData_LowCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_MadLab.xml">
+    <Content Include="resources\xml\EmbeddedData_MadLabCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_ManorOfTheImmortals.xml">
+    <Content Include="resources\xml\EmbeddedData_ManorOfTheImmortalsCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_Mid.xml">
+    <Content Include="resources\xml\EmbeddedData_MidCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_Monsters.xml">
+    <Content Include="resources\xml\EmbeddedData_MonstersCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_Mountains.xml">
+    <Content Include="resources\xml\EmbeddedData_MountainsCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_Objects.xml">
+    <Content Include="resources\xml\EmbeddedData_ObjectsCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_OceanTrench.xml">
+    <Content Include="resources\xml\EmbeddedData_OceanTrenchCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_OryxCastle.xml">
+    <Content Include="resources\xml\EmbeddedData_OryxCastleCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_OryxChamber.xml">
+    <Content Include="resources\xml\EmbeddedData_OryxChamberCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_OryxWineCellar.xml">
+    <Content Include="resources\xml\EmbeddedData_OryxWineCellarCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_Permapets.xml">
+    <Content Include="resources\xml\EmbeddedData_PermapetsCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_Pets.xml">
+    <Content Include="resources\xml\EmbeddedData_PetsCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_PirateCave.xml">
+    <Content Include="resources\xml\EmbeddedData_PirateCaveCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_Players.xml">
+    <Content Include="resources\xml\EmbeddedData_PlayersCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_Projectiles.xml">
+    <Content Include="resources\xml\EmbeddedData_ProjectilesCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_Regions.xml">
+    <Content Include="resources\xml\EmbeddedData_RegionsCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_Shore.xml">
+    <Content Include="resources\xml\EmbeddedData_ShoreCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_SnakePit.xml">
+    <Content Include="resources\xml\EmbeddedData_SnakePitCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_SpriteWorld.xml">
+    <Content Include="resources\xml\EmbeddedData_SpriteWorldCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_StaticObjects.xml">
+    <Content Include="resources\xml\EmbeddedData_StaticObjectsCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_TempObjects.xml">
+    <Content Include="resources\xml\EmbeddedData_TempObjectsCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_TestingObjects.xml">
+    <Content Include="resources\xml\EmbeddedData_TestingObjectsCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_Textiles.xml">
+    <Content Include="resources\xml\EmbeddedData_TextilesCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_TombOfTheAncients.xml">
+    <Content Include="resources\xml\EmbeddedData_TombOfTheAncientsCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_TravisTesting.xml">
+    <Content Include="resources\xml\EmbeddedData_TravisTestingCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_TutorialObjects.xml">
+    <Content Include="resources\xml\EmbeddedData_TutorialObjectsCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_TutorialScript.xml">
+    <Content Include="resources\xml\EmbeddedData_TutorialScriptCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_UndeadLair.xml">
+    <Content Include="resources\xml\EmbeddedData_UndeadLairCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\EmbeddedData_WillemTesting.xml">
+    <Content Include="resources\xml\EmbeddedData_WillemTestingCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="resources\xml\Skins.xml">
