Slow progress on wServer

--- a/common/server.config
+++ b/common/server.config
@@ -6,6 +6,7 @@
   <!--Server info-->
   <bindAddress>127.0.0.1</bindAddress>
   <bindPort>80</bindPort>
+  <version>7.0</version>
   
   <!--World info-->
   <name>localhost</name>
@@ -15,4 +16,5 @@
   <maxPlayers>256</maxPlayers>
   <latitude>0</latitude>
   <longitude>0</longitude>
+  <tps>20</tps>
 </config>
