--- a/wServer/wServer.csproj
+++ b/wServer/wServer.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{13B061EF-7E9F-40A7-A4E3-DA6EEF11A568}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>world</RootNamespace>
-    <AssemblyName>world</AssemblyName>
+    <RootNamespace>wServer</RootNamespace>
+    <AssemblyName>wServer</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -33,9 +33,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BouncyCastle.Crypto, Version=1.8.5.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
+      <HintPath>..\packages\BouncyCastle.1.8.5\lib\BouncyCastle.Crypto.dll</HintPath>
+    </Reference>
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
       <HintPath>..\packages\NLog.4.6.6\lib\net45\NLog.dll</HintPath>
     </Reference>
+    <Reference Include="StackExchange.Redis, Version=2.0.0.0, Culture=neutral, PublicKeyToken=c219ff1ca8c2ce46" />
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.0\lib\netstandard2.0\System.Buffers.dll</HintPath>
@@ -54,8 +58,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="networking\Client.cs" />
+    <Compile Include="networking\Client.KeepAlive.cs" />
+    <Compile Include="networking\IPacketHandler.cs" />
+    <Compile Include="networking\packets\incoming\IncomingMessage.cs" />
+    <Compile Include="networking\packets\outgoing\OutgoingMessage.cs" />
+    <Compile Include="networking\packets\Packet.cs" />
+    <Compile Include="networking\packets\PacketIds.cs" />
+    <Compile Include="networking\RC4.cs" />
+    <Compile Include="networking\RSA.cs" />
+    <Compile Include="networking\server\BufferManager.cs" />
+    <Compile Include="networking\server\ClientPool.cs" />
+    <Compile Include="networking\server\CommHandler.cs" />
+    <Compile Include="networking\server\Server.cs" />
+    <Compile Include="networking\server\SocketAsyncEventArgsPool.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="realm\DbEvents.cs" />
+    <Compile Include="realm\ISControl.cs" />
+    <Compile Include="realm\RealmManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\common\common.csproj">
@@ -66,6 +87,11 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="networking\handlers\" />
+    <Folder Include="realm\entities\" />
+    <Folder Include="realm\worlds\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
