--- a/wServer/wServer.csproj
+++ b/wServer/wServer.csproj
@@ -64,14 +64,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Empty.cs" />
     <Compile Include="logic\Behavior.cs" />
     <Compile Include="logic\BehaviorDb.cs" />
     <Compile Include="logic\behaviors\AnnounceOnDeath.cs" />
     <Compile Include="logic\behaviors\BackAndForth.cs" />
     <Compile Include="logic\behaviors\BringEnemy.cs" />
     <Compile Include="logic\behaviors\Buzz.cs" />
-    <Compile Include="logic\behaviors\ChangeMusic.cs" />
-    <Compile Include="logic\behaviors\ChangeMusicOnDeath.cs" />
     <Compile Include="logic\behaviors\ChangeSize.cs" />
     <Compile Include="logic\behaviors\Charge.cs" />
     <Compile Include="logic\behaviors\ConditionalEffect.cs" />
@@ -294,14 +293,35 @@
     <Compile Include="realm\Oryx.cs" />
     <Compile Include="realm\PortalMonitor.cs" />
     <Compile Include="realm\RealmManager.cs" />
+    <Compile Include="realm\setpieces\Building.cs" />
+    <Compile Include="realm\setpieces\Castle.cs" />
+    <Compile Include="realm\setpieces\Crystal.cs" />
+    <Compile Include="realm\setpieces\CubeGod.cs" />
+    <Compile Include="realm\setpieces\GhostShip.cs" />
+    <Compile Include="realm\setpieces\Graveyard.cs" />
+    <Compile Include="realm\setpieces\Grove.cs" />
+    <Compile Include="realm\setpieces\Hermit.cs" />
     <Compile Include="realm\setpieces\ISetPiece.cs" />
+    <Compile Include="realm\setpieces\KageKami.cs" />
+    <Compile Include="realm\setpieces\LavaFissure.cs" />
+    <Compile Include="realm\setpieces\LichyTemple.cs" />
+    <Compile Include="realm\setpieces\LordoftheLostLands.cs" />
+    <Compile Include="realm\setpieces\Noise.cs" />
+    <Compile Include="realm\setpieces\Oasis.cs" />
+    <Compile Include="realm\setpieces\Pentaract.cs" />
+    <Compile Include="realm\setpieces\Pyre.cs" />
     <Compile Include="realm\setpieces\SetPieces.cs" />
+    <Compile Include="realm\setpieces\SkullShrine.cs" />
+    <Compile Include="realm\setpieces\Sphinx.cs" />
+    <Compile Include="realm\setpieces\Temple.cs" />
+    <Compile Include="realm\setpieces\TempleA.cs" />
+    <Compile Include="realm\setpieces\TempleB.cs" />
+    <Compile Include="realm\setpieces\Tower.cs" />
     <Compile Include="realm\Sight.cs" />
     <Compile Include="realm\Stats.cs" />
     <Compile Include="realm\StatsManager.cs" />
     <Compile Include="realm\terrain\Json2Wmap.cs" />
     <Compile Include="realm\terrain\JsonMapExporter.cs" />
-    <Compile Include="realm\terrain\TerrainTile.cs" />
     <Compile Include="realm\terrain\Tile.cs" />
     <Compile Include="realm\terrain\Wmap.cs" />
     <Compile Include="realm\worlds\DungeonTemplates.cs" />
