--- a/wServer/wServer.csproj
+++ b/wServer/wServer.csproj
@@ -155,7 +155,41 @@
     <Compile Include="logic\transitions\TimedTransition.cs" />
     <Compile Include="networking\Client.cs" />
     <Compile Include="networking\Client.KeepAlive.cs" />
+    <Compile Include="networking\handlers\AcceptTradeHandler.cs" />
+    <Compile Include="networking\handlers\AoeAckHandler.cs" />
+    <Compile Include="networking\handlers\BuyHandler.cs" />
+    <Compile Include="networking\handlers\CancelTradeHandler.cs" />
+    <Compile Include="networking\handlers\ChangeGuildRankHandler.cs" />
+    <Compile Include="networking\handlers\ChangeTradeHandler.cs" />
+    <Compile Include="networking\handlers\CheckCreditsHandler.cs" />
+    <Compile Include="networking\handlers\ChooseNameHandler.cs" />
+    <Compile Include="networking\handlers\CreateGuildHandler.cs" />
+    <Compile Include="networking\handlers\CreateHandler.cs" />
     <Compile Include="networking\handlers\EscapeHandler.cs" />
+    <Compile Include="networking\handlers\GotoAckHandler.cs" />
+    <Compile Include="networking\handlers\GroundDamageHandler.cs" />
+    <Compile Include="networking\handlers\GuildInviteHandler.cs" />
+    <Compile Include="networking\handlers\GuildRemoveHandler.cs" />
+    <Compile Include="networking\handlers\HelloHandler.cs" />
+    <Compile Include="networking\handlers\InvDropHandler.cs" />
+    <Compile Include="networking\handlers\InvSwapHandler.cs" />
+    <Compile Include="networking\handlers\JoinGuildHandler.cs" />
+    <Compile Include="networking\handlers\LoadHandler.cs" />
+    <Compile Include="networking\handlers\MoveHandler.cs" />
+    <Compile Include="networking\handlers\OtherHitHandler.cs" />
+    <Compile Include="networking\handlers\PlayerHitHandler.cs" />
+    <Compile Include="networking\handlers\PlayerShootHandler.cs" />
+    <Compile Include="networking\handlers\PlayerTextHandler.cs" />
+    <Compile Include="networking\handlers\PongHandler.cs" />
+    <Compile Include="networking\handlers\RequestTradeHandler.cs" />
+    <Compile Include="networking\handlers\ReskinHandler.cs" />
+    <Compile Include="networking\handlers\SetConditionHandler.cs" />
+    <Compile Include="networking\handlers\ShootAckHandler.cs" />
+    <Compile Include="networking\handlers\SquareHitHandler.cs" />
+    <Compile Include="networking\handlers\TeleportHandler.cs" />
+    <Compile Include="networking\handlers\UpdateAckHandler.cs" />
+    <Compile Include="networking\handlers\UseItemHandler.cs" />
+    <Compile Include="networking\handlers\UsePortalHandler.cs" />
     <Compile Include="networking\IPacketHandler.cs" />
     <Compile Include="networking\packets\incoming\AoeAck.cs" />
     <Compile Include="networking\packets\incoming\AcceptTrade.cs" />
@@ -232,6 +266,7 @@
     <Compile Include="networking\packets\outgoing\Update.cs" />
     <Compile Include="networking\packets\Packet.cs" />
     <Compile Include="networking\packets\PacketIds.cs" />
+    <Compile Include="networking\PolicyServer.cs" />
     <Compile Include="networking\RC4.cs" />
     <Compile Include="networking\RSA.cs" />
     <Compile Include="networking\server\BufferManager.cs" />
