--- a/wServer/wServer.csproj
+++ b/wServer/wServer.csproj
@@ -165,6 +165,9 @@
     <Compile Include="networking\handlers\ChooseNameHandler.cs" />
     <Compile Include="networking\handlers\CreateGuildHandler.cs" />
     <Compile Include="networking\handlers\CreateHandler.cs" />
+    <Compile Include="networking\handlers\EditAccountListHandler.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
     <Compile Include="networking\handlers\EnemyHitHandler.cs" />
     <Compile Include="networking\handlers\EscapeHandler.cs" />
     <Compile Include="networking\handlers\GotoAckHandler.cs" />
