--- a/common/nlog.config
+++ b/common/nlog.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-
+  
+  <variable name="logDirectory" value="./unset"/>
   <targets async="true">
     <target name="logconsole" xsi:type="ColoredConsole" layout="(${date:format=yyyy\/MM\/dd HH\:mm}) [${callsite:includeSourcePath=false:includeNamespace=false}] ${message}"/>
-    <target name="logerror" xsi:type="File" fileName="nlog/error.log" />
-    <target name="logfatal" xsi:type="File" fileName="nlog/fatal.log"/>
-  </targets>xd
+    <target name="logerror" xsi:type="File" fileName="${logDirectory}/error.log" />
+    <target name="logfatal" xsi:type="File" fileName="${logDirectory}/fatal.log"/>
+  </targets>
 
   <rules>
     <logger name="*" minlevel="Trace" writeTo="logconsole" />
