--- a/wServer/wServer.csproj
+++ b/wServer/wServer.csproj
@@ -287,6 +287,7 @@
     <Compile Include="realm\Collision.cs" />
     <Compile Include="realm\commands\Command.cs" />
     <Compile Include="realm\commands\RankedCommands.cs" />
+    <Compile Include="realm\commands\UnrankedCommands.cs" />
     <Compile Include="realm\ConnectManager.cs" />
     <Compile Include="realm\DbEvents.cs" />
     <Compile Include="realm\DbServerManager.cs" />
