--- a/common/common.csproj
+++ b/common/common.csproj
@@ -851,7 +851,7 @@
     <Content Include="resources\xml\EmbeddedData_UndeadLairCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="resources\xml\Skins.xml">
+    <Content Include="resources\xml\EmbeddedData_SkinsCXML.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
